// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ContainerEventSource /> > render html correctly > should render dates with 12 hour style 1`] = `
"<ul data-v-cf9ff940="" class="events group pt-4 medium" show-container-name="false">
  <li data-v-cf9ff940="" data-key="1" data-time="1560336942459" class="group/entry">
    <div data-v-1344ff3d="" data-v-cf9ff940="" class="relative flex w-full items-start gap-x-2 group-[.compact]:items-stretch">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div data-v-961504e7="" data-v-1344ff3d="" class="tag inline-flex items-center justify-center rounded bg-base-lighter px-2 py-[0.2em] !items-start shrink-0 select-none" size="small">
        <div class="inline-flex gap-2 whitespace-nowrap text-blue"><time datetime="2019-06-12T10:55:42.459Z" class="mobile-hidden">06/12/2019</time><time datetime="2019-06-12T10:55:42.459Z">10:55:42 AM</time></div>
      </div>
      <div data-v-e625cddd="" data-v-1344ff3d="" class="mt-1.5 size-2.5 flex-none rounded-lg flex select-none"></div>
      <div class="log-wrapper whitespace-pre-wrap [word-break:break-word] group-[.disable-wrap]:whitespace-nowrap">foo bar</div>
      <div class="flex gap-2 duration-250 absolute -right-1 opacity-0 transition-opacity delay-150 group-hover/entry:opacity-100">
        <!--v-if-->
      </div>
    </div>
  </li>
</ul>"
`;

exports[`<ContainerEventSource /> > render html correctly > should render dates with 24 hour style 1`] = `
"<ul data-v-cf9ff940="" class="events group pt-4 medium" show-container-name="false">
  <li data-v-cf9ff940="" data-key="1" data-time="1560336942459" class="group/entry">
    <div data-v-1344ff3d="" data-v-cf9ff940="" class="relative flex w-full items-start gap-x-2 group-[.compact]:items-stretch">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div data-v-961504e7="" data-v-1344ff3d="" class="tag inline-flex items-center justify-center rounded bg-base-lighter px-2 py-[0.2em] !items-start shrink-0 select-none" size="small">
        <div class="inline-flex gap-2 whitespace-nowrap text-blue"><time datetime="2019-06-12T10:55:42.459Z" class="mobile-hidden">06/12/2019</time><time datetime="2019-06-12T10:55:42.459Z">10:55:42</time></div>
      </div>
      <div data-v-e625cddd="" data-v-1344ff3d="" class="mt-1.5 size-2.5 flex-none rounded-lg flex select-none"></div>
      <div class="log-wrapper whitespace-pre-wrap [word-break:break-word] group-[.disable-wrap]:whitespace-nowrap">foo bar</div>
      <div class="flex gap-2 duration-250 absolute -right-1 opacity-0 transition-opacity delay-150 group-hover/entry:opacity-100">
        <!--v-if-->
      </div>
    </div>
  </li>
</ul>"
`;

exports[`<ContainerEventSource /> > render html correctly > should render messages 1`] = `
"<ul data-v-cf9ff940="" class="events group pt-4 medium" show-container-name="false">
  <li data-v-cf9ff940="" data-key="1" data-time="1560336942459" class="group/entry">
    <div data-v-1344ff3d="" data-v-cf9ff940="" class="relative flex w-full items-start gap-x-2 group-[.compact]:items-stretch">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div data-v-961504e7="" data-v-1344ff3d="" class="tag inline-flex items-center justify-center rounded bg-base-lighter px-2 py-[0.2em] !items-start shrink-0 select-none" size="small">
        <div class="inline-flex gap-2 whitespace-nowrap text-blue"><time datetime="2019-06-12T10:55:42.459Z" class="mobile-hidden">06/12/2019</time><time datetime="2019-06-12T10:55:42.459Z">10:55:42 AM</time></div>
      </div>
      <div data-v-e625cddd="" data-v-1344ff3d="" class="mt-1.5 size-2.5 flex-none rounded-lg flex select-none"></div>
      <div class="log-wrapper whitespace-pre-wrap [word-break:break-word] group-[.disable-wrap]:whitespace-nowrap">This is a message.</div>
      <div class="flex gap-2 duration-250 absolute -right-1 opacity-0 transition-opacity delay-150 group-hover/entry:opacity-100">
        <!--v-if-->
      </div>
    </div>
  </li>
</ul>"
`;

exports[`<ContainerEventSource /> > renders loading correctly 1`] = `
"<div class="flex min-h-[1px] justify-center"><span class="loading loading-bars loading-md mt-4 text-primary" style="display: none;"></span></div>
<ul class="flex animate-pulse flex-col gap-4 p-4">
  <div class="flex flex-row gap-2">
    <div class="h-3 w-40 shrink-0 rounded-full bg-base-content/50 opacity-50"></div>
    <div class="h-3 rounded-full bg-base-content/50 opacity-50 w-3/5"></div>
  </div>
  <div class="flex flex-row gap-2">
    <div class="h-3 w-40 shrink-0 rounded-full bg-base-content/50 opacity-50"></div>
    <div class="h-3 rounded-full bg-base-content/50 opacity-50 w-1/2"></div>
  </div>
  <div class="flex flex-row gap-2">
    <div class="h-3 w-40 shrink-0 rounded-full bg-base-content/50 opacity-50"></div>
    <div class="h-3 rounded-full bg-base-content/50 opacity-50 w-3/4"></div>
  </div>
  <div class="flex flex-row gap-2">
    <div class="h-3 w-40 shrink-0 rounded-full bg-base-content/50 opacity-50"></div>
    <div class="h-3 rounded-full bg-base-content/50 opacity-50 w-2/3"></div>
  </div>
  <div class="flex flex-row gap-2">
    <div class="h-3 w-40 shrink-0 rounded-full bg-base-content/50 opacity-50"></div>
    <div class="h-3 rounded-full bg-base-content/50 opacity-50 w-1/3"></div>
  </div>
  <div class="flex flex-row gap-2">
    <div class="h-3 w-40 shrink-0 rounded-full bg-base-content/50 opacity-50"></div>
    <div class="h-3 rounded-full bg-base-content/50 opacity-50 w-9/12"></div>
  </div><span class="sr-only">Loading...</span>
</ul>
<div data-v-2dbf2928="" class="animate-background h-1 w-1/2 bg-gradient-radial to-transparent to-75% from-secondary"></div>"
`;

exports[`<ContainerEventSource /> > should parse messages 1`] = `
SimpleLogEntry {
  "_message": "This is a message.",
  "containerID": undefined,
  "date": 2019-06-12T10:55:42.459Z,
  "id": 1,
  "level": undefined,
  "position": undefined,
  "std": "stderr",
}
`;
